--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <main>
   <head>
+    <h1>my headline</h1>
   </head>
 
   <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maxime mollitia eaque ipsa quibusdam provident debitis ullam non magni dignissimos optio fugiat, doloribus adipisci dicta atque repellendus earum quos est.</p>
   </body>
+  <footer>the footer</footer>
  </main>
 </html>
