--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
-<main>
-  <head>
-    <h1>my headline</h1>
-  </head>
-
-  <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maxime mollitia eaque ipsa quibusdam provident debitis ullam non magni dignissimos optio fugiat, doloribus adipisci dicta atque repellendus earum quos est.</p>
-  </body>
-  <footer>the footer</footer>
- </main>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>docks</title>
+</head>
+<body>
+  <div class="">hey</div>
+</body>
 </html>
