--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>docks</title>
+  <title>Document</title>
 </head>
 <body>
-  <div class="">hey</div>
+  <img src="img/cat.jpeg" alt="not kitty">
+  <p>heyheyhey</p>
 </body>
-</html>
+</html> 
