added working cat

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="img/cat.jpeg" alt="not kitty">
+  <img src="img/kitty.jpg" alt="not kitty">
   <p>heyheyhey</p>
 </body>
 </html> 
