--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <h1>big eyed cat</h1>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,6 +9,6 @@
 </head>
 <body>
   <img src="img/kitty.jpg" alt="not kitty">
-  <p>heyheyhey</p>
+  <p>hey hey hey</p>
 </body>
 </html> 
